Bug 79691 - FILESAVE: DOCX: relations with embedded ppt lost
Summary: FILESAVE: DOCX: relations with embedded ppt lost
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.3.0.0.beta1
Hardware: Other All
: medium normal
Assignee: Jacobo Aragunde Pérez
URL:
Whiteboard: target:4.4.0 target:4.3.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-05 17:08 UTC by Jacobo Aragunde Pérez
Modified: 2014-06-13 09:02 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Test case (53.18 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-06-05 17:08 UTC, Jacobo Aragunde Pérez
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jacobo Aragunde Pérez 2014-06-05 17:08:40 UTC
Created attachment 100476 [details]
Test case

The attached test case is a .docx document with an embedded PowerPoint presentation (Office 97-2003 format). Steps to reproduce the bug:

1. Open test case with Writer.
2. Save as a new .docx.
3. Open the exported document in Word. The embedding is not detected as a presentation any more (e.g. you cannot double-click on it to view).

The embedded file seems to be inside the document but there is no way to access it from Word.
Comment 1 Jorendc 2014-06-05 18:45:20 UTC
Repro :-), tested using Windows 8.1 with LibreOffice Version: 4.4.0.0.alpha0+
Build ID: b447687292334687a371b66d7ad56ba9662b898e
TinderBox: Win-x86@39, Branch:master, Time: 2014-06-03_06:24:04
Comment 2 Commit Notification 2014-06-06 11:57:54 UTC
Jacobo Aragunde Perez committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=06a5bbd720b89d629ebf6ccf0d9a62a77c2d9a28

fdo#79691: Fix ppt files embedded in .docx documents



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2014-06-06 12:17:34 UTC
Jacobo Aragunde Perez committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3da69f954cdd69f2762859395b963733608276e9&h=libreoffice-4-3

fdo#79691: Fix ppt files embedded in .docx documents


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.