fdo#79691: Fix ppt files embedded in .docx documents

Ensure that the proper media type and relation type are written in the
.docx document for a .ppt presentation, because they are different
from the ones for a .pptx file.

Change-Id: Id91269e49c0effb35415ae8827ff949e69e7063f